tests/rosetta/out/Java/bitmap-write-a-ppm-file.error
javac error: exit status 1
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:59: error: incompatible types: List<Colour> cannot be converted to List<List<Colour>>
        List<List<Colour>> row = rows.get(y);
                                         ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:60: error: incompatible types: Colour cannot be converted to List<Colour>
        row.set(x, c);
                   ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:61: error: incompatible types: List<List<Colour>> cannot be converted to List<Colour>
        rows.set(y, row);
                    ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:88: error: incompatible types: Object cannot be converted to List<List<Colour>>
                List<List<Colour>> p = ((List)b.pixels.get(y)).get(x);
                                                                  ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:89: error: cannot find symbol
                if (p.R > maxv) {
                     ^
  symbol:   variable R
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:90: error: cannot find symbol
                    maxv = (int)(p.R);
                                  ^
  symbol:   variable R
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:92: error: cannot find symbol
                if (p.G > maxv) {
                     ^
  symbol:   variable G
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:93: error: cannot find symbol
                    maxv = (int)(p.G);
                                  ^
  symbol:   variable G
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:95: error: cannot find symbol
                if (p.B > maxv) {
                     ^
  symbol:   variable B
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:96: error: cannot find symbol
                    maxv = (int)(p.B);
                                  ^
  symbol:   variable B
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:102: error: incompatible types: String cannot be converted to int
        int out = "P3\n# generated from Bitmap.writeppmp3\n" + String.valueOf(b.width) + " " + String.valueOf(b.height) + "\n" + String.valueOf(maxv) + "\n";
                                                                                                                                                      ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:103: error: cannot find symbol
        int numsize = String.valueOf(maxv).size();
                                          ^
  symbol:   method size()
  location: class String
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:109: error: incompatible types: Object cannot be converted to List<List<Colour>>
                List<List<Colour>> p = ((List)b.pixels.get(y)).get(x);
                                                                  ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:110: error: cannot find symbol
                line = line + "   " + pad(p.R, numsize) + " " + pad(p.G, numsize) + " " + pad(p.B, numsize);
                                           ^
  symbol:   variable R
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:110: error: cannot find symbol
                line = line + "   " + pad(p.R, numsize) + " " + pad(p.G, numsize) + " " + pad(p.B, numsize);
                                                                     ^
  symbol:   variable G
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:110: error: cannot find symbol
                line = line + "   " + pad(p.R, numsize) + " " + pad(p.G, numsize) + " " + pad(p.B, numsize);
                                                                                               ^
  symbol:   variable B
  location: variable p of type List<List<Colour>>
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:113: error: incompatible types: String cannot be converted to int
            out = (int)(out + line);
                       ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:115: error: incompatible types: String cannot be converted to int
                out = (int)(out + "\n");
                           ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:118: error: incompatible types: String cannot be converted to int
                out = (int)(out + "\n");
                           ^
/tmp/TestMochiToJavabitmap-write-a-ppm-file1043449344/001/BitmapWriteAPpmFile.java:122: error: incompatible types: int cannot be converted to String
        return out;
               ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
20 errors
